Mon May 11 11:04:52 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/read.c: fix reading empty packets

Mon May 11 09:52:26 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/buffering.h: fix a test
	* src/dblib/unittests/t0013.c src/dblib/unittests/t0013.sql:
	- remove table if exixts

Mon May 11 09:24:40 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c: remove warnings and duplicate logs

Sun May  3 15:26:26 EDT 2009	JK Lowden <jklowden@freetds.org>
	* src/ctlib/blk.c src/ctlib/cs.c src/ctlib/ct.c
	* src/ctlib/ctutil.c src/ctlib/unittests/common.c
	* src/dblib/dbutil.c BUGS
	- better ct-lib logging

Thu Apr 30 08:48:24 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/check_symbols.txt misc/order_coverage.pl: notes and updates

Thu Apr 23 15:29:30 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/commit: small fix

Thu Apr 23 15:12:24 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/buffering.h src/dblib/dblib.c:
	- add internal test for buffering
	- clear row number if deleted
	- fix buffer_delete_rows
	- fix dbclrbuf not clearing all rows

Thu Apr 23 11:40:43 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/sybase_tests: fix rebuild

Thu Apr 23 11:36:05 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/t0002.c: fix test

Wed Apr 22 17:11:00 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/t0008.c: fix test

Tue Apr 21 15:39:35 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/sybase_tests: improve

Tue Apr 21 11:43:31 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/prepare_win32.sh: batch for dblib tests

Mon Apr 20 10:55:17 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: fix timeout test

Sat Apr 18 15:18:39 EDT 2009	JK Lowden <jklowden@freetds.org>
	* include/sybdb.h include/tds.h
	* src/apps/bsqldb.c src/apps/tsql.c