@@ -1,3 +1,6 @@
+Mon May 11 17:11:52 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/blob1.c: test wide for output
+
 Mon May 11 11:04:52 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/read.c: fix reading empty packets
 
@@ -1539,4 +1542,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2785 2009/05/11 09:05:11 freddy77 Exp $
+$Id: ChangeLog,v 1.2786 2009/05/11 15:12:44 freddy77 Exp $
